Bug 436371 - Can't download scanfile, as it is too big
Summary: Can't download scanfile, as it is too big
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-29 19:32 UTC by Oskar Alois
Modified: 2021-04-30 06:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fehler (402.84 KB, image/jpeg)
2021-04-29 19:32 UTC, Oskar Alois
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oskar Alois 2021-04-29 19:32:21 UTC
Created attachment 138009 [details]
Fehler

SUMMARY


STEPS TO REPRODUCE
1. Fernsehen einrichten
2. Suchlaufdaten über Internet aktualisieren
3. Aktualisierung fehlgeschlagen

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Ubuntu 21.04 >>>>>>>>   pls email : oskar.runggaldier@gmail.com
Comment 1 Mauro Carvalho Chehab 2021-04-30 06:39:46 UTC
Git commit 209a263ab2191f0b1d13f48a0a2fa67794357ad0 by Mauro Carvalho Chehab.
Committed on 30/04/2021 at 06:39.
Pushed by mauroc into branch 'master'.

dvbconfigdialog: increase max download size for scandata

By the time Kaffeine was written, a 64KB max limit were
enough, but nowadays, the scandata file has already 104KB.

Increase the limit up to 1MB, in order to fix download
issues with valid files.

While here, also improve the download messages to show
how much data was downloaded and to report the reason
why a download was aborted.

Signed-off-by: Mauro Carvalho Chehab <mchehab+huawei@kernel.org>

M  +21   -7    src/dvb/dvbconfigdialog.cpp
M  +1    -0    src/dvb/dvbconfigdialog.h

https://invent.kde.org/multimedia/kaffeine/commit/209a263ab2191f0b1d13f48a0a2fa67794357ad0
Comment 2 Mauro Carvalho Chehab 2021-04-30 06:50:27 UTC
(In reply to Oskar Alois from comment #0)

English please.

> STEPS TO REPRODUCE
> 1. Fernsehen einrichten
> 2. Suchlaufdaten über Internet aktualisieren
> 3. Aktualisierung fehlgeschlagen

STEPS TO REPRODUCE
1. Set up television
2. Update search data via the Internet
3. Update failed
Comment 3 Mauro Carvalho Chehab 2021-04-30 06:51:57 UTC
In order to prevent too big files, Kaffeine has an upper limit. The current limit is too low for the size of the current scanfile (104KB).

Commit 209a263ab2191f0b1d13f48a0a2fa67794357ad0 increased the limit to 1MB.